tests/baselines/reference/libMembers.errors.txt
libMembers.ts(4,3): error TS2551: Property 'subby' does not exist on type 'string'. Did you mean 'sub'?
libMembers.ts(9,17): error TS1011: An element access expression should take an argument.
libMembers.ts(12,15): error TS2339: Property 'prototype' does not exist on type 'C'.


==== libMembers.ts (3 errors) ====
    var s="hello";
    s.substring(0);
    s.substring(3,4);
    s.subby(12);   // error unresolved
      ~~~~~
!!! error TS2551: Property 'subby' does not exist on type 'string'. Did you mean 'sub'?
!!! related TS2728 lib.es2015.core.d.ts:--:--: 'sub' is declared here.
    String.fromCharCode(12);
    namespace M {
        export class C {
        }
        var a=new C[];
                    
!!! error TS1011: An element access expression should take an argument.
        a.length;
        a.push(new C());
        (new C()).prototype;
                  ~~~~~~~~~
!!! error TS2339: Property 'prototype' does not exist on type 'C'.
    }
    
    